--- a/html/index.html
+++ b/html/index.html
@@ -80,7 +80,7 @@
           <li>
             <span class="Fecha">29.03.2018</span>
             <br> URU, Paysandú, 
-            <br>Anfiteatro del Río Uruguay - 19:00 hs. 
+            <br>Anfiteatro dl Río Uruguay - 19:00 hs
             
             <br>Entradas Anticipadas a través de ABITAB</li>
         
